create faculty and groups table and added to them factories with seeders
